--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+tmp/*
+*.tmp
+*.tmp.txt
+*.tmp.py
+*.tmp.ipynb
+*.tmp.cpp
+*.tmp.hpp
+*.tmp.cxx
+*.tmp.c
+draft*
+
+.vscode/*
+build/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
